--- a/app/app/ClientApp/src/index.html
+++ b/app/app/ClientApp/src/index.html
@@ -23,4 +23,11 @@
   <body >
     <app-root>Loading...</app-root>
   </body>
+
+
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+</script>
 </html>
